# machine-learning-haskell

./: .gitignore
perceptron/: .gitignore  perceptron.cabal
perceptron/src/: Main.hs  Options.hs
