name:              perceptron
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable perceptron
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base >=4 && <5, attoparsec, attoparsec-arff, bytestring, containers
  default-language: Haskell2010
